# ferris-actor

./: Cargo.toml  LICENSE  README.md  build.rs
src/: _build.rs  act.rs  main.rs
src/act/: actor.rs  go.rs  mod.rs  snap.rs  version.rs
