[package]
name = "ferris-actor"
version = "0.2.1"
edition = "2021"

authors = ["Zoom.Quiet <zoomquiet+rs@gmail.com>"]
#license = "BSD-2-Clause"
license-file = "LICENSE"
description = "a CLI tool for show and snap ASCII-art animation for Ferris"

readme = "README.md"
#homepage = "https://github.com/rust-cli/BXMr"
repository = "https://github.com/zhrust/ferris-actor"
keywords = ["cli", "Ferris", "ASCII-art", "Animation"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# ...
#rustflags = ["-A", "clippy::all=off"]

[dependencies]
log = "0.4"
tracing = "0.1"
clia-tracing-config = "0.2"
#chrono = "0.4.23"
toml = "0.7.2"
termion = "2.0.1"

indoc = "2.0.0"
serde_json = "1.0.93"
handlebars = "4.3.6"
rand = "0.8.5"

[dependencies.clap]
version = "4.1.6"
features = ["derive"]

[dev-dependencies]
#assert_cmd = "2"
#predicates = "2"
